gucc_lib = library('gucc',
    sources : [
        'src/io_utils.cpp',
        'src/file_utils.cpp',
        'src/string_utils.cpp',
        'src/fs_utils.cpp',
        'src/cpu.cpp',
        'src/pacmanconf_repo.cpp',
        'src/repos.cpp',
        'src/initcpio.cpp',
        'src/block_devices.cpp',
        'src/partition_config.cpp',
        'src/partitioning.cpp',
        'src/swap.cpp',
        'src/luks.cpp',
        'src/zfs.cpp',
        'src/btrfs.cpp',
        'src/system_query.cpp',
        'src/user.cpp',
        'src/locale.cpp',
        'src/fstab.cpp',
        'src/crypttab.cpp',
        'src/bootloader.cpp',
        'src/systemd_services.cpp',
        'src/autologin.cpp',
        'src/mtab.cpp',
        'src/umount_partitions.cpp',
        'src/mount_partitions.cpp',
        'src/hwclock.cpp',
        'src/package_profiles.cpp',
        'src/logger.cpp',
        'src/fetch_file.cpp',
        'src/package_list.cpp',
        'src/kernel_params.cpp',
        'src/chwd.cpp',
        'src/timezone.cpp',
        'src/lvm.cpp',
        'src/systemd_repart.cpp',
        'src/systemd_homed.cpp',
    ],
    include_directories : [include_directories('include')],
    dependencies: deps
)

if is_tests_build
    subdir('tests')
endif
